# ai-wise-council

./: .gitignore  01_draft_levels.ipynb  02_llm_judge.ipynb  Dockerfile  Dockerfile_predict  Makefile  README.md  TODO.md  env_example  notebook.ipynb  notebook_definitive.ipynb  pyproject.toml
ai_wise_council/: __init__.py  agents.py  debate.py  finetuning.py  model_clients.py  predict.py  prompts.py  train.py  utils.py
ai_wise_council/components/: agents.py  model_clients.py
ai_wise_council/prompts/: constructors.py  instructions.py
data/output/: debate_dataset.csv
docker-dev/: Dockerfile_dev
notebooks/: 01_agentic_debate.ipynb  02_generate_dataset.ipynb  03_EDA.ipynb  03_generate_dataset.ipynb  04_call_api.ipynb  04_call_local_api.ipynb
notebooks/data/: topics.csv
notebooks/data/output/: debate_dataset.csv
